rust/src/nasl/interpreter/tests/snapshots/scannerlib__nasl__interpreter__tests__expected_number.snap
---
source: src/nasl/interpreter/tests/mod.rs
expression: "crate :: nasl :: interpreter :: tests ::\ninterpret_err(stringify! (expected_number), \"a = [1, 2, 3]; a['hello'];\")"
---
error: Expected a number.
  ┌─ expected_number:1:18
  │
1 │ a = [1, 2, 3]; a['hello'];
  │                  ^^^^^^^ Expected a number.
